MDEV-4310 geometry function equals hangs forever.         The Geometry::get_mbr() function can return an error on         a bad data. We have to check for that and act respectively.